# flatco

./: CMakeLists.txt  LICENSE  README.md
include/: flatco.h
src/: CMakeLists.txt  flatco.cpp  getopt.h
test/: CMakeLists.txt  flatco_test.cxx
